<resources>
    <string name="app_name">TabaTimer</string>
    <string name="command_stop">stop</string>
    <string name="command_reset">reset</string>
    <string name="command_start">start</string>
    <string name="command_pause">pause</string>
    <string name="command_resume">resume</string>
    <string name="command_plus">+</string>
    <string name="command_minus">&#x2212;</string>
    <string name="timer_zero">00:00:00</string>
    <string name="timer_ten">00:00:10</string>
    <string name="timer_twenty">00:00:20</string>
    <string name="command_pip">pip</string>
</resources>