<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:id="@+id/tvElapsedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_zero"
            android:textSize="60sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/btStartPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/command_start"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/tvElapsedTime"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btReset"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="16dp"
            android:paddingVertical="16dp"/>

    <Button
            android:id="@+id/btReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/command_reset"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/tvElapsedTime"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/btStartPause"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginStart="16dp"
            android:paddingVertical="16dp"/>
    <TextView
            android:id="@+id/tvActiveTime"
            android:text="@string/timer_twenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/tvRestTime"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:id="@+id/tvRestTime"
            android:text="@string/timer_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/tvElapsedTime"
            android:layout_marginBottom="16dp"/>
    <Button
            android:id="@+id/btMinusActiveTime"
            android:text="@string/command_minus"
            android:onClick="onActivePlusMinusButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/tvActiveTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvActiveTime"
            app:layout_constraintBottom_toBottomOf="@+id/tvActiveTime" android:textSize="30sp"/>
    <Button
            android:id="@+id/btPlusActiveTime"
            android:text="@string/command_plus"
            android:onClick="onActivePlusMinusButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tvActiveTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tvActiveTime"
            app:layout_constraintTop_toTopOf="@+id/tvActiveTime"
            android:textSize="30sp"/>
    <Button
            android:id="@+id/btMinusRestTime"
            android:text="@string/command_minus"
            android:onClick="onRestPlusMinusButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/tvRestTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRestTime"
            app:layout_constraintBottom_toBottomOf="@+id/tvRestTime" android:textSize="30sp"/>
    <Button
            android:id="@+id/btPlusRestTime"
            android:text="@string/command_plus"
            android:onClick="onRestPlusMinusButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tvRestTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRestTime"
            app:layout_constraintBottom_toBottomOf="@+id/tvRestTime" android:textSize="30sp"/>
    <Button
            android:id="@+id/buttonPip"
            android:text="@string/command_pip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btStartPause"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:paddingVertical="12dp" android:paddingHorizontal="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>